feat:  adjust text and css for overworld

--- a/.gitignore
+++ b/.gitignore
@@ -20,4 +20,44 @@
 .history
 .ionide
 
+# macOS
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# Windows
+Thumbs.db
+ehthumbs.db
+Desktop.ini
+$RECYCLE.BIN/
+
+# Linux
+*~
+
+# Temporary files
+*.tmp
+*.temp
+*.log
+*.bak
+*.swp
+*.swo
+
+# Environment files
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# IDEs
+.idea/
+*.sublime-project
+*.sublime-workspace
+
+
+
 # End of https://www.toptal.com/developers/gitignore/api/visualstudiocode
